
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct nvc0_graph_priv {int dummy; } ;


 int nv_mthd (struct nvc0_graph_priv*,int,int,int) ;

__attribute__((used)) static void
nvc0_grctx_generate_902d(struct nvc0_graph_priv *priv)
{
 nv_mthd(priv, 0x902d, 0x0200, 0x000000cf);
 nv_mthd(priv, 0x902d, 0x0204, 0x00000001);
 nv_mthd(priv, 0x902d, 0x0208, 0x00000020);
 nv_mthd(priv, 0x902d, 0x020c, 0x00000001);
 nv_mthd(priv, 0x902d, 0x0210, 0x00000000);
 nv_mthd(priv, 0x902d, 0x0214, 0x00000080);
 nv_mthd(priv, 0x902d, 0x0218, 0x00000100);
 nv_mthd(priv, 0x902d, 0x021c, 0x00000100);
 nv_mthd(priv, 0x902d, 0x0220, 0x00000000);
 nv_mthd(priv, 0x902d, 0x0224, 0x00000000);
 nv_mthd(priv, 0x902d, 0x0230, 0x000000cf);
 nv_mthd(priv, 0x902d, 0x0234, 0x00000001);
 nv_mthd(priv, 0x902d, 0x0238, 0x00000020);
 nv_mthd(priv, 0x902d, 0x023c, 0x00000001);
 nv_mthd(priv, 0x902d, 0x0244, 0x00000080);
 nv_mthd(priv, 0x902d, 0x0248, 0x00000100);
 nv_mthd(priv, 0x902d, 0x024c, 0x00000100);
}
